# CS1430-Group

./: Background.cpp  BackgroundMusic.h  CMakeLists.txt  Display Text Function  Enemies.cpp  Enemies.h  FindSDL2.cmake  FindSDL2_image.cmake  Flipper.cpp  Flipper.h  Force Class  LTimer.cpp  LTimer.h  Member Functions  README.md  SDL Functions.cpp  SDL Functions.h  SDL_Plotter.cpp  SDL_Plotter.h  SoundEffect.cpp  SoundEffect.h  Soundtest  Updated Ball Collision-Sound  backgroundMusic.cpp  backgroundMusic.h  main.cpp
